<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Tags"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="@color/defaultPurple"
        android:layout_marginBottom="10dp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editTextTagInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:hint="Create a tag"
            android:background="@drawable/border_pink"/>

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#BD2AC0"
            android:textColor="@color/black"
            android:text="Create"
            android:textSize="15sp"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selected Tags"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupSelectedTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Available Tags"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupExistingTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"/>

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="#BD2AC0"
        android:text="Done" />

</LinearLayout>